# QingzhuiROS

./: .gitignore
scripts/: imu_setup.bash  record_data.bash  throttle_map.bash
src/: README
src/qz_bridge/: CMakeLists.txt  package.xml
src/qz_bridge/configs/: RobotY13.xml
src/qz_bridge/launch/: cmd_vel_bridge.launch  state_publisher.launch
src/qz_bridge/msg/: GaitPhase.msg  RobotTipState.msg  RobotTipStateV2.msg
src/qz_bridge/src/: QzRobotStatePublisher.cpp  QzRobotStatePublisher.h  cmd_vel_bridge.cpp  qz_state_publisher.cpp
src/qz_bringup/: CMakeLists.txt  package.xml
src/qz_bringup/launch/: qz_bringup.launch
src/qz_description/: CMakeLists.txt  package.xml
src/qz_description/launch/: qz_description.launch  qz_remote_viz.launch
src/qz_description/rviz/: qz_rviz_setting.rviz
src/qz_description/urdf/: qz_description.urdf
src/qz_navigation/: CMakeLists.txt  package.xml
src/qz_navigation/configs/: base_local_planner_params.yaml  cartographer_qingzhui_2d.lua  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/qz_navigation/launch/: qz_navigation_path_plan.launch  qz_navigation_slam.launch  qz_navigation_start_all.launch
